Minor update to PSO examples.

--- a/optimization/swarmintelligence/particleswarm.ipynb
+++ b/optimization/swarmintelligence/particleswarm.ipynb
@@ -173,27 +173,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-0lc9qgqt', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-ci2n2ahg', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-mhes5wh7', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-4c98okxj', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-9op0muba', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-0j5cgx6j', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-azf5qvmn', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-kbdu0f8y', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-61z2umpy', purging\n",
-      "distributed.diskutils - INFO - Found stale lock file and directory '/home/olliekampo/code/jinx/dask-worker-space/worker-4f96je2l', purging\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Inverted Pendulum System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from dask.distributed import Client, LocalCluster\n",
     "\n",
@@ -322,21 +313,11 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from control.pid import PIDController\n",
     "from control.systems import InvertedPendulumSystem\n",
+    "from control.controlutils import plot_error\n",
     "from auxiliary.numpyutils import get_turning_points\n",
-    "\n",
-    "def plot_error(time_points, error_values, output_values) -> None:\n",
-    "    figure, (error_axis, output_axis) = plt.subplots(1, 2)\n",
-    "    figure.suptitle(\"Error and Output over Time\")\n",
-    "    error_axis.plot(time_points, error_values, color=\"red\", label=\"Error\")\n",
-    "    error_axis.set_xlabel(\"Time\"); error_axis.set_ylabel(\"Error\")\n",
-    "    output_axis.plot(time_points, output_values, color=\"cyan\", label=\"Output\")\n",
-    "    output_axis.set_xlabel(\"Time\"); output_axis.set_ylabel(\"Output\")\n",
-    "    figure.subplots_adjust(wspace=0.2)\n",
-    "    figure.set_size_inches(10, 5)\n",
     "\n",
     "pend_system = InvertedPendulumSystem()\n",
     "controller = PIDController(*result.best_position, initial_error=pend_system.get_control_input() - pend_system.get_setpoint())\n",
@@ -360,6 +341,77 @@
     "print(f\"Error curve turning points: {time_points[get_turning_points(error_values)]}\")\n",
     "\n",
     "plot_error(time_points, error_values, output_values)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mass Spring Damper System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best position :: [ 1.53007002 -0.23681911 -0.90448706]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from optimization.swarmintelligence.particleswarm import ParticleSwarmSystem, Dimension\n",
+    "from control.pid import PIDController\n",
+    "from control.systems import MassSpringDamperSystem\n",
+    "from control.controlutils import simulate_control\n",
+    "\n",
+    "msd_system = MassSpringDamperSystem.random_start(spring_constant=2.0, damping_constant=0.5, steady_state_error=1.5, seed=1)\n",
+    "controller = PIDController(0.0, 0.0, 0.0, initial_error=msd_system.get_control_input() - msd_system.get_setpoint())\n",
+    "\n",
+    "ticks: int = 1000\n",
+    "delta_time: float = 0.1\n",
+    "\n",
+    "def control_evaluator(vec):\n",
+    "    controller.reset()\n",
+    "    controller.set_gains(*vec)\n",
+    "    msd_system.reset()\n",
+    "    return simulate_control(msd_system, controller, ticks, delta_time)\n",
+    "\n",
+    "psystem = ParticleSwarmSystem([Dimension(0.0, 2.0, 0.2),\n",
+    "                               Dimension(-1.0, 1.0, 0.1),\n",
+    "                               Dimension(-1.0, 1.0, 0.1)],\n",
+    "                               control_evaluator,\n",
+    "                               maximise=False)\n",
+    "\n",
+    "result, data = psystem.run(total_particles=50,\n",
+    "                            init_strategy=\"linspace\",\n",
+    "                            iterations_limit=10000,\n",
+    "                            stagnation_limit=100,\n",
+    "                            inertia=1.5,\n",
+    "                            final_inertia=0.5,\n",
+    "                            inertia_decay_rate=1.0,\n",
+    "                            inertia_decay_type=\"lin\",\n",
+    "                            personal_coef=1.5,\n",
+    "                            personal_coef_final=0.5,\n",
+    "                            global_coef=0.0,\n",
+    "                            global_coef_final=1.0,\n",
+    "                            use_neighbourhood=False,\n",
+    "                            neighbour_method=\"kd_tree\",\n",
+    "                            coef_decay_rate=1.0,\n",
+    "                            coef_decay_type=\"sin\",\n",
+    "                            bounce=False,\n",
+    "                            use_fitness_approximation=False,\n",
+    "                            fitness_approximation_method=\"knr\",\n",
+    "                            gather_stats=True)\n",
+    "\n",
+    "print(f\"Best position :: {result.best_position}\")\n"
    ]
   }
  ],
