Update GA examples.

--- a/optimization/evolutionary/geneticalgorithms.ipynb
+++ b/optimization/evolutionary/geneticalgorithms.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|\u001b[36m█████████████████████████████████████████████████████████████████████████████████████████████\u001b[0m| 100/100 [00:00<00:00, 171.86it/s, Best fitness=20, Mem(Mb)=00096, CPU(%)=117.00]\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01010101010101010101 20\n"
+     ]
+    }
+   ],
    "source": [
     "from optimization.evolutionary.geneticalgorithms import GeneticSystem, GeneticEncoder, BitStringBaseTypes, SplitCrossOver, PointMutator, ProportionateSelector\n",
     "\n",
@@ -22,55 +37,8 @@
     "mutator = PointMutator(1)\n",
     "system = GeneticSystem(encoder, selector, recombiner, mutator)\n",
     "\n",
-    "result = system.run(5, 50, 1.5, 0.75, mutation_factor_final=0.0)\n",
-    "print(result)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from auxiliary.moreitertools import chunk\n",
-    "from optimization.evolutionary.geneticalgorithms import GeneticSystem, GeneticEncoder, BitStringBaseTypes, SplitCrossOver, PointMutator, ProportionateSelector\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from control.pid import PIDController\n",
-    "from control.systems import InvertedPendulumSystem\n",
-    "from control.controlutils import simulate_control\n",
-    "\n",
-    "pend_system = InvertedPendulumSystem()\n",
-    "controller = PIDController(0.0, 0.0, 0.0, initial_error=pend_system.get_control_input() - pend_system.get_setpoint())\n",
-    "\n",
-    "ticks: int = 100\n",
-    "delta_time: float = 0.1\n",
-    "\n",
-    "def control_evaluator(vec):\n",
-    "    controller.reset()\n",
-    "    controller.set_gains(*vec)\n",
-    "    pend_system.reset()\n",
-    "    return simulate_control(pend_system, controller, ticks, delta_time)\n",
-    "\n",
-    "class TestEncoder(GeneticEncoder):\n",
-    "    def encode(self, solution):\n",
-    "        return solution\n",
-    "    def decode(self, solution):\n",
-    "        return solution\n",
-    "    def evaluate_fitness(self, chromosome):\n",
-    "        return -control_evaluator([int(c, base=2) / 100 for c in chunk(chromosome, 10)])\n",
-    "\n",
-    "encoder = TestEncoder(30, False, BitStringBaseTypes.bin)\n",
-    "selector = ProportionateSelector()\n",
-    "recombiner = SplitCrossOver()\n",
-    "mutator = PointMutator(1)\n",
-    "system = GeneticSystem(encoder, selector, recombiner, mutator)\n",
-    "\n",
-    "result = system.run(500, 500, 1.5, 0.75, mutation_factor_final=0.0, max_generations=500)\n",
-    "print(result)\n",
-    "print([int(c, base=2) / 100 for c in chunk(result.best_individual, 10)])"
+    "result = system.run(100, 200, 1.5, 0.75, mutation_factor_final=0.0)\n",
+    "print(result.best_individual, result.best_fitness)\n"
    ]
   }
  ],
